--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <div class="slides">
 
 <!-- Title -->
-<section data-markdown data-separator="^\n---\n$" data-separator-vertical="^\n--\n$" data-background="http://dille.name/media/Ninjacat_Unicorn_DIY.png" data-background-size="75%" class="center" style="background-color:rgba(0, 0, 0, 0.5); text-align: center; vertical-align: middle;"><script type="text/template">
+<section data-markdown data-separator="^---$" data-separator-vertical="^--$" data-background="http://dille.name/media/Ninjacat_Unicorn_DIY.png" data-background-size="75%" class="center" style="background-color:rgba(0, 0, 0, 0.5); text-align: center; vertical-align: middle;"><script type="text/template">
     <!-- .slide: id="title" -->
 
     ### Professional PowerShell [<i class="fas fa-print"></i>](?print-pdf)
@@ -60,6 +60,44 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
     [Changelog](#/changelog)
 </script></section>
+
+<!-- 1: Bio -->
+<section data-markdown data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"><script type="text/template">
+    <!-- .slide: id="bio" -->
+
+    ## Nicholas Dille
+
+    ### Husband, father, geek, author
+
+    ![](http://dille.name/media/nicholas.jpg) <!-- .element: style="size: 50%; width: 30%; float: right;" -->
+
+    Docker Captain since 2017
+
+    Microsoft MVP since 2010
+
+    <i class="fab fa-twitter"></i> [@NicholasDille](https://twitter.com/nicholasdille)
+
+    <i class="fas fa-rss"></i> [Blog](http://dille.name)
+
+    Co-author of three Hyper-V books
+</script></section>
+
+<section data-markdown="toc.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="scope.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="formatting.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="abbreviations.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="line_breaks.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="oneliners.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="output.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="functions.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="pipelines.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="caveats.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="hints.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="parallelization.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="remoting.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="code_quality.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="sharing.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
+<section data-markdown="changelog.md" data-separator="^---$" data-separator-vertical="^--$"></section>
 
 </div>
 </div>
