--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <div class="slides">
 
 <!-- Title -->
-<section data-markdown data-separator="^---$" data-separator-vertical="^--$" data-background="http://dille.name/media/Ninjacat_Unicorn_DIY.png" data-background-size="75%" class="center" style="background-color:rgba(0, 0, 0, 0.5); text-align: center; vertical-align: middle;"><script type="text/template">
+<section data-markdown data-separator="^---$" data-separator-vertical="^--$" data-background="https://dille.name/media/Ninjacat_Unicorn_DIY.png" data-background-size="75%" class="center" style="background-color:rgba(0, 0, 0, 0.5); text-align: center; vertical-align: middle;"><script type="text/template">
     <!-- .slide: id="title" -->
 
     ### Professional PowerShell [<i class="fas fa-print"></i>](?print-pdf)
@@ -69,7 +69,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
     ### Husband, father, geek, author
 
-    ![](http://dille.name/media/nicholas.jpg) <!-- .element: style="size: 50%; width: 30%; float: right;" -->
+    ![](https://dille.name/media/nicholas.jpg) <!-- .element: style="size: 50%; width: 30%; float: right;" -->
 
     Docker Captain since 2017
 
